--- a/staking.html
+++ b/staking.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Stake DRF Tokens</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
-    .container { max-width: 480px; margin: auto; background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    h2 { text-align: center; }
-    input, button { width: 100%; padding: 10px; margin: 10px 0; }
-    button { background-color: #4CAF50; color: white; border: none; cursor: pointer; }
-    button:hover { background-color: #45a049; }
-  </style>
+  <title>DRF Staking Page</title>
+</head>
+<body>
+  <h1>Welcome to DRF Staking</h1>
+  <p>This is your working staking.html page!</p>
+</body>
+</html>
+
 </head>
 <body>
   <div class="container">
