--- a/staking.html
+++ b/staking.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>DRF Staking Page</title>
+  <meta charset="UTF-8" />
+  <title>DRF Staking Test Page</title>
 </head>
 <body>
-  <h1>Welcome to DRF Staking</h1>
-  <p>This is your working staking.html page!</p>
+  <h1>✅ Staking Page is working!</h1>
+  <p>If you're seeing this message, the file is loading correctly from GitHub Pages.</p>
 </body>
 </html>
 
