--- a/staking.html
+++ b/staking.html
@@ -2,88 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>DRF Staking Test Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DRF Staking</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f2f4f8;
+    }
+    header {
+      background-color: #222;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      font-size: 1.4em;
+      font-weight: bold;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 15px;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 500px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      text-align: center;
+      color: #222;
+    }
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      background-color: #0066ff;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0050cc;
+    }
+    .success {
+      background: #e6ffed;
+      color: #006400;
+      padding: 12px;
+      margin-top: 20px;
+      border-radius: 8px;
+      text-align: center;
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <h1>✅ Staking Page is working!</h1>
-  <p>If you're seeing this message, the file is loading correctly from GitHub Pages.</p>
-</body>
-</html>
+  <header>
+    <div class="logo">DRF Wallet</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="staking.html">Staking</a>
+      <a href="wallet.html">Wallet</a>
+      <a href="admin.html">Admin</a>
+      <a href="burn.html">Burn</a>
+    </nav>
+  </header>
 
-</head>
-<body>
   <div class="container">
-    <h2>📥 Stake Your DRF</h2>
+    <h2>Stake DRF to Unlock Access</h2>
+    <form id="stakingForm">
+      <label for="wallet">Your DRF Wallet Address:</label>
+      <input type="text" id="wallet" required placeholder="0x..." />
 
-    <button onclick="connectWallet()">🔌 Connect Wallet</button>
-    <p id="walletAddress">Wallet not connected</p>
+      <label for="amount">Amount to Stake:</label>
+      <input type="number" id="amount" required min="1" placeholder="e.g. 100" />
 
-    <label>Enter DRF amount to stake:</label>
-    <input type="number" id="stakeAmount" placeholder="e.g. 1000 DRF" min="1">
+      <button type="submit">Stake Now</button>
+    </form>
 
-    <button onclick="submitStakingRequest()">🚀 Submit Staking Request</button>
+    <div class="success" id="successMessage">
+      ✅ You’ve staked your DRF! Access granted.
+    </div>
   </div>
 
   <script>
-    let userAddress = "";
+    document.getElementById('stakingForm').addEventListener('submit', function (e) {
+      e.preventDefault();
+      const wallet = document.getElementById('wallet').value.trim();
+      const amount = parseFloat(document.getElementById('amount').value);
 
-    async function connectWallet() {
-      if (window.ethereum) {
-        try {
-          const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-          userAddress = accounts[0];
-          document.getElementById("walletAddress").innerText = "Connected: " + userAddress;
-        } catch (err) {
-          alert("Connection rejected.");
-        }
-      } else {
-        alert("MetaMask not detected.");
-      }
-    }
-
-    function submitStakingRequest() {
-      if (!userAddress) {
-        alert("Please connect your wallet first.");
+      if (!wallet.startsWith('0x') || amount <= 0) {
+        alert('Please enter a valid wallet address and amount.');
         return;
       }
 
-      const amount = document.getElementById("stakeAmount").value;
-      if (!amount || amount <= 0) {
-        alert("Please enter a valid amount.");
-        return;
-      }
-
-      const stakeData = `DRF Staking Request\nWallet: ${userAddress}\nAmount: ${amount} DRF\nDate: ${new Date().toLocaleString()}`;
-
-      // Option 1: Download as .txt file
-      const blob = new Blob([stakeData], { type: 'text/plain' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = `DRF_Staking_${Date.now()}.txt`;
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-
-      // Option 2: Send to Google Apps Script (replace URL)
-      /*
-      fetch("YOUR_GOOGLE_APPS_SCRIPT_URL", {
-        method: "POST",
-        mode: "no-cors",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          wallet: userAddress,
-          amount: amount,
-          type: "stake"
-        }),
-      });
-      */
-
-      alert("Staking request submitted!");
-      document.getElementById("stakeAmount").value = "";
-    }
+      // Simulate success (no backend needed in early stage)
+      document.getElementById('successMessage').style.display = 'block';
+      document.getElementById('stakingForm').reset();
+    });
   </script>
 </body>
 </html>
