--- a/index.html
+++ b/index.html
@@ -6,60 +6,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #f8f9fa;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
     }
     header {
-      background-color: #222;
-      padding: 10px 20px;
+      background: #111;
+      color: white;
+      padding: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      color: #fff;
     }
     .logo {
       font-size: 1.5em;
       font-weight: bold;
     }
     nav a {
-      color: #fff;
+      color: white;
       text-decoration: none;
       margin-left: 15px;
-      font-weight: 500;
     }
     nav a:hover {
       text-decoration: underline;
     }
-    .container {
-      padding: 40px 20px;
+    main {
+      padding: 40px;
       text-align: center;
     }
-    .container h1 {
-      font-size: 2.2em;
-      color: #333;
+    h1 {
+      font-size: 2.5em;
+      color: #222;
     }
-    .container p {
-      color: #555;
+    p {
       font-size: 1.1em;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">DRF Wallet</div>
+    <div class="logo">💼 DRF Wallet</div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="staking.html">Staking</a>
       <a href="wallet.html">Wallet</a>
-      <a href="admin.html">Admin</a>
+      <a href="staking.html">Staking</a>
       <a href="burn.html">Burn</a>
+      <a href="admin.html">Admin</a>
     </nav>
   </header>
 
-  <div class="container">
-    <h1>Welcome to the Official DRF Wallet</h1>
-    <p>Manage your DRF, stake tokens, track transactions, and access secure tools — all in one place.</p>
-  </div>
+  <main>
+    <h1>Welcome to DRF Wallet</h1>
+    <p>Your all-in-one decentralized finance tool.</p>
+  </main>
 </body>
 </html>
