--- a/index.html
+++ b/index.html
@@ -35,6 +35,50 @@
     }
   </style>
 </head>
+
+
+  <body>
+<!-- DRF Exchange Calculator -->
+<div class="drf-calculator" style="background: white; padding: 20px; max-width: 400px; margin: 30px auto; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+  <h2 style="text-align:center;">DRF Exchange Calculator</h2>
+  <label for="usdAmount">Enter USD Amount:</label>
+  <input type="number" id="usdAmount" placeholder="e.g. 100" style="padding:10px; width:100%; margin-top:10px; border-radius:5px; border:1px solid #ccc;">
+  <button onclick="calculateDRF()" style="padding:10px; width:100%; margin-top:10px; border-radius:5px; border:none; background:#1a73e8; color:white;">Calculate</button>
+
+  <div id="output" style="display:none; margin-top:20px; background:#e9ffe9; padding:10px; border-radius:5px;">
+    <p><strong>DRF Bought @14.42:</strong> <span id="drfBuy"></span></p>
+    <p><strong>DRF Needed to Redeem @15.42:</strong> <span id="drfSell"></span></p>
+    <p><strong>DRF Loss:</strong> <span id="drfLoss"></span></p>
+    <p><strong>Loss Percentage:</strong> <span id="lossPercent"></span>%</p>
+  </div>
+</div>
+
+<script>
+  function calculateDRF() {
+    const usd = parseFloat(document.getElementById('usdAmount').value);
+    const buyRate = 14.42;
+    const sellRate = 15.42;
+
+    if (isNaN(usd) || usd <= 0) {
+      alert("Please enter a valid USD amount.");
+      return;
+    }
+
+    const drfBuy = usd * buyRate;
+    const drfSell = usd * sellRate;
+    const drfLoss = drfSell - drfBuy;
+    const lossPercent = ((drfLoss / drfBuy) * 100).toFixed(2);
+
+    document.getElementById('drfBuy').innerText = drfBuy.toFixed(2);
+    document.getElementById('drfSell').innerText = drfSell.toFixed(2);
+    document.getElementById('drfLoss').innerText = drfLoss.toFixed(2);
+    document.getElementById('lossPercent').innerText = lossPercent;
+    document.getElementById('output').style.display = 'block';
+  }
+</script>
+</body>
+
+  
 <body>
   <header>
     <div class="logo">🚀 DRF Wallet</div>
